# agentic-snake

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
app/: __init__.py  game.py
tests/: __init__.py  conftest.py  test_game.py
